# Copyright (c) 2018 Jakob Meng, <jakobmeng@web.de>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
#

#install(FILES
#     DevTools.cmake
#     FindFLAME.cmake
#     Findgperftools_profiler.cmake
#     FindGZIP.cmake
#     Findhdf5.cmake
#     FindLAPACKE.cmake
#     Findnetcdf.cmake
#     Findnetcdf-cxx4.cmake
#     FindOBJDUMP.cmake
#     FindPERF.cmake
#     FindVALGRIND.cmake
#     MaybeAddFlags.cmake
#     #string_replace.cmake
#     DESTINATION ${HBRS_CMAKE_INSTALL_CMAKEMODDIR})
